...
          crossAxisCount: 2,
          mainAxisSpacing: 10,
          crossAxisSpacing: 10,
          children: List.generate(length, (index) {
            var package = packages[index];
            return Container(
              key: ValueKey('package_$index'),
              child: ItemPackage(
                onTap: () async {
                  _model.navigateToPushNamed(
                      routeName: DetailPackageScreen.route,
                      arguments: package.name);
                },
...
    return ConfigBuilder(builder: (_, theme) {
      return Scaffold(
        appBar: AppBar(
          centerTitle: false,
          actions: <Widget>[
            IconButton(
                tooltip: 'search',
                key: Key('search'),
                icon: CustomIcon(icon: 'search'),
                onPressed: () {
                  _model.navigateToPushNamed(routeName: SearchScreen.route);
                }),
            IconButton(
...
