...
      }

      /// list results
      return CustomRefresh(
        refresh: _model.refresh,
        child: ListView.builder(
            key: const ValueKey('search-result'),
            shrinkWrap: true,
            padding: EdgeInsets.symmetric(horizontal: 10, vertical: 8),
            itemCount: _model.results.length,
            itemBuilder: (context, index) {
              var name = _model.results[index];
              return Container(
...
