...
  Widget build(BuildContext context) {
    return Observer(builder: (_) {
      return Scaffold(
        backgroundColor: kPlaceholderColor,
        appBar: AppBar(
          leading: BackButton(
            key: ValueKey('BackButton'),
          ),
          centerTitle: false,
          actions: <Widget>[
            if (_model.hasData)
              IconButton(
                  icon: CustomIcon(
...
